--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -32,6 +32,9 @@
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
+    <div fxFlex [hidden] = "dish">
+      <mat-spinner></mat-spinner><h4>Loading.... Please Wait!</h4>
+    </div>
   </div>
 
   <div fxFlex="40" >
@@ -49,6 +52,9 @@
         </mat-list>
       </mat-card-content>
     </mat-card>
+    <div fxFlex [hidden] = "dish">
+      <mat-spinner></mat-spinner><h4>Loading.... Please Wait!</h4>
+    </div>
   </div>
 
 
