--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -53,6 +53,27 @@
           <p>{{comments.rating}} Stars</p>
           <p>-- {{comments.author}} {{comments.date | date}}</p>
         </mat-list>
+        <div class="form-size">
+          <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+            <p>
+              <mat-form-field class="full-width">
+                <input matInput formControlName="author" placeholder="Name" type="text" required>
+                <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+              </mat-form-field>
+            </p>
+            <p>
+              <mat-slider formControlName="rating" [max]="5" [min]="0" [step]="1" [value]="5" thumbLabel tickInterval="1" aria-labelledby="rating" (input)="onInputChange($event)" ></mat-slider>
+            </p>
+            <p>
+              <mat-form-field class="full-width">
+                <textarea matInput formControlName="comment" placeholder="Your comment" rows=5 required></textarea>
+                <mat-error *ngIf="formErrors.comment">{{formErrors.comment}</mat-error>
+              </mat-form-field>
+            </p>
+            <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+          </form>
+        </div>
+        
       </mat-card-content>
     </mat-card>
     <div fxFlex [hidden] = "dish">
