--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -35,8 +35,12 @@
         <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
       </mat-card-actions>
     </mat-card>
-    <div fxFlex [hidden] = "dish">
+    <div fxFlex [hidden] = "dish || errMess">
       <mat-spinner></mat-spinner><h4>Loading.... Please Wait!</h4>
+    </div>
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
     </div>
   </div>
 
@@ -76,8 +80,12 @@
         
       </mat-card-content>
     </mat-card>
-    <div fxFlex [hidden] = "dish">
+    <div fxFlex [hidden] = "dish || errMess">
       <mat-spinner></mat-spinner><h4>Loading.... Please Wait!</h4>
+    </div>
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
     </div>
   </div>
 
