--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
     <mat-card>
       <mat-card-header>
         <mat-card-title>
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div fxFlex="40" *ngIf="dish" >
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" >
     <mat-card>
       <mat-card-header>
         <mat-card-title>
