--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -37,9 +37,8 @@
   </div>
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
 
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()" *ngIf="showFeedbackForm">
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -81,4 +80,23 @@
       <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
     </form>
   </div>
+  <div *ngIf="showSubmittedFeedback" [@expand]>
+    <h3>Your Feedback</h3>
+    <p>First Name: {{feedbackcopy.firstname}}</p>
+    <p>Last Name: {{feedbackcopy.lastname}}</p>
+    <p>Tel.Number: {{feedbackcopy.telnum}}</p>
+    <p>Email: {{feedbackcopy.email}}</p>
+    <p>Contact you?: {{feedbackcopy.agree}}</p>
+    <p>How?: {{feedbackcopy.contacttype}}</p>
+    <p>Feedback: {{feedbackcopy.message}}</p>
+  </div>
+  <div fxFlex [hidden] = "!showLoading || errMess">
+    <p><strong>Submitting Form</strong></p>
+    <mat-spinner></mat-spinner><h4>Loading.... Please Wait!</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
+    
 </div>
