--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -58,7 +58,7 @@
           <p>-- {{comments.author}} {{comments.date | date}}</p>
         </mat-list>
         <div class="form-size">
-          <form novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+          <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
             <p>
               <mat-form-field class="full-width">
                 <input matInput formControlName="author" placeholder="Name" type="text" required>
